# Angine

./: .gitignore  CMakeLists.txt  README.md  imgui.ini  vcpkg.json
include/: Applications.hpp  Buffer.hpp  Camera.hpp  Header.hpp  Light.hpp  Material.hpp  Mesh.hpp  Model.hpp  Scene.hpp  Shader.hpp  Texture.hpp
res/models/: sphere.blend  sphere.mtl
res/models/O_bcsz/: 8csz.mtl
res/models/genshin_impact_obj/Ganyu model/: Ganyu model.pmx
res/models/genshin_impact_obj/Genshin impact thoma/: Thoma.pmx
res/models/genshin_impact_obj/Hu Tao model/: Hu Tao.pmx
res/models/genshin_impact_obj/Scaramouche model/: scaramouche Model done.pmx
res/models/monkey/: monkey.fbx
res/shaders/fragment/: Blinn_Phone.fs  Border.fs  Light.fs  Model.fs  SingleColor.fs  depth.fs
res/shaders/fragment/Defer/: Phong.fs  Phong_SSR.fs  SSAO.fs  SSR.fs  ssaoBlur.fs
res/shaders/fragment/Other/: HDR2cube.fs
res/shaders/fragment/Reality/PBR/: PBR0.fs
res/shaders/fragment/Screen/: Blur.fs  GrayScale.fs  Nothing_vec2.fs  Sharpen.fs
res/shaders/fragment/Special/: Normal.fs  SkyBox.fs  Z-Depth.fs  empty.fs  reflect.fs  refract.fs
res/shaders/fragment/pbr/: BRDFfilter.fs  Convolution.fs  preFilter.fs
res/shaders/fragment/render/: Gbuffer.fs
res/shaders/vertex/: Border.vs  D_MVP_SHADOW.vs  HDR2cube.vs  MVP_0.vs  MVP_3.vs  MVP_4_shadowMap.vs  MVP_depth.vs  Nothing.vs  Nothing_vec2.vs  SkyBox.vs  brdf.vs  depth.vs  reflect.vs  simpleDepth.vs
res/textures/: HDRI0.hdr  main.cc
src/: Applications.cc  Buffer.cc  Camera.cc  Mesh.cc  Model.cc  Shader.cc  Texture.cc
test/: main.cc
(+4 files in other folders)
